# practice-cli

./: Cargo.toml  README.md  bar.txt
src/: main.rs
