[package]
name = "practice-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.16.2"
env_logger = "0.9.0"
log = "0.4.17"
clap-verbosity-flag = "1.0.1"